--- a/multi-webapp/package.json
+++ b/multi-webapp/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/throttler": "^4.0.0",
     "axios": "^1.4.0",
     "isomorphic-fetch": "^3.0.0",
     "node-fetch": "^3.3.1",
